corrected wrap text error

--- a/public/css/mystyle.css
+++ b/public/css/mystyle.css
@@ -59,11 +59,17 @@ font-family:'Raleway'; */
 /* right website css */
 
 .custom-card{
+  max-width: 100%;
+  word-wrap: break-word;
   border-radius: 20px;
   background-color: rgba(255, 255, 255, 0.5);
   min-height: 775px;
   box-shadow:0 10px 10px 0 rgba(0, 0, 0, 1);
 
+}
+
+.text-card{
+  font-family: 'Raleway';
 }
 
 .appli-button{
